<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/auto_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/starts_the_next_generation"
        android:src="@android:drawable/ic_menu_slideshow"
        app:backgroundTint="@color/red_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dead_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dead_color"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/color_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/light_pulse"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/living_light_pulse_color"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/dead_color"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dark_pulse"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/living_dark_pulse_color"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/dead_color"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/load_activity"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/load_activity"
        app:layout_constraintBottom_toTopOf="@+id/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/load_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="23dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/auto_button"
        app:layout_constraintEnd_toStartOf="@+id/load_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/auto_button"
        app:layout_constraintTop_toTopOf="@+id/auto_button"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/save_activity"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="5dp"
        android:text="@string/make_activity"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/load_activity"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next_gen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/starts_the_next_generation"
        app:layout_constraintBottom_toBottomOf="@+id/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/load_button"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/change_colors"
        app:layout_constraintBottom_toTopOf="@+id/save_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/load"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toStartOf="@+id/next_gen_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>